--- a/Police Activity Analysis - EDA.ipynb
+++ b/Police Activity Analysis - EDA.ipynb
@@ -47,8 +47,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:05:52.226921Z",
-     "start_time": "2025-09-23T21:05:52.220424Z"
+     "end_time": "2025-09-23T21:20:01.724201Z",
+     "start_time": "2025-09-23T21:20:01.717810Z"
     }
    },
    "source": [
@@ -58,13 +58,13 @@
     "warnings.filterwarnings('ignore')"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:05:52.432632Z",
-     "start_time": "2025-09-23T21:05:52.248977Z"
+     "end_time": "2025-09-23T21:20:01.931485Z",
+     "start_time": "2025-09-23T21:20:01.747744Z"
     }
    },
    "cell_type": "code",
@@ -230,12 +230,12 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -258,8 +258,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:05:52.502663Z",
-     "start_time": "2025-09-23T21:05:52.455346Z"
+     "end_time": "2025-09-23T21:20:02.004334Z",
+     "start_time": "2025-09-23T21:20:01.948871Z"
     }
    },
    "cell_type": "code",
@@ -287,18 +287,18 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:05:52.528214Z",
-     "start_time": "2025-09-23T21:05:52.520261Z"
+     "end_time": "2025-09-23T21:20:02.019627Z",
+     "start_time": "2025-09-23T21:20:02.012473Z"
     }
    },
    "cell_type": "code",
@@ -321,13 +321,13 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:05:52.558059Z",
-     "start_time": "2025-09-23T21:05:52.546345Z"
+     "end_time": "2025-09-23T21:20:02.048023Z",
+     "start_time": "2025-09-23T21:20:02.037096Z"
     }
    },
    "cell_type": "code",
@@ -342,12 +342,12 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 32
   },
   {
    "metadata": {},
@@ -369,8 +369,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:05:52.588875Z",
-     "start_time": "2025-09-23T21:05:52.572093Z"
+     "end_time": "2025-09-23T21:20:02.092346Z",
+     "start_time": "2025-09-23T21:20:02.062769Z"
     }
    },
    "cell_type": "code",
@@ -386,18 +386,18 @@
        "(91741, 13)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:06:32.784286Z",
-     "start_time": "2025-09-23T21:06:32.708863Z"
+     "end_time": "2025-09-23T21:20:02.154228Z",
+     "start_time": "2025-09-23T21:20:02.106957Z"
     }
    },
    "cell_type": "code",
@@ -423,12 +423,12 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -436,6 +436,52 @@
    "source": [
     "## Dropping Rows\n",
     "\n",
+    "\n"
+   ],
+   "id": "21b134eb65d9751b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T21:20:02.201853Z",
+     "start_time": "2025-09-23T21:20:02.162242Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(police.isnull().sum())\n",
+    "print(police.shape)"
+   ],
+   "id": "1b34afef1434a973",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stop_date                 0\n",
+      "stop_time                 0\n",
+      "driver_gender          5205\n",
+      "driver_race            5202\n",
+      "violation_raw          5202\n",
+      "violation              5202\n",
+      "search_conducted          0\n",
+      "search_type           88434\n",
+      "stop_outcome           5202\n",
+      "is_arrested            5202\n",
+      "stop_duration          5202\n",
+      "drugs_related_stop        0\n",
+      "district                  0\n",
+      "dtype: int64\n",
+      "(91741, 13)\n"
+     ]
+    }
+   ],
+   "execution_count": 35
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "Sometimes, a dataset may have missing values in columns that are **critical for analysis**. If the number of missing rows is small, it is often better to remove them rather than risk skewing the results.\n",
     "\n",
     "In this step:\n",
@@ -444,15 +490,15 @@
     "- Only a small fraction of rows are missing values in this column.\n",
     "- Those rows will be **dropped** to ensure the dataset remains reliable and ready for gender-based analysis.\n",
     "\n",
-    "This step helps maintain accuracy while keeping as much useful data as possible.\n"
+    "This step helps maintain accuracy while keeping as much useful data as possible."
    ],
-   "id": "21b134eb65d9751b"
+   "id": "2e0917f3bd45aa00"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:12:33.716545Z",
-     "start_time": "2025-09-23T21:12:33.643005Z"
+     "end_time": "2025-09-23T21:20:27.468285Z",
+     "start_time": "2025-09-23T21:20:27.411729Z"
     }
    },
    "cell_type": "code",
@@ -461,7 +507,7 @@
     "print(police.isnull().sum())\n",
     "print(police.shape)"
    ],
-   "id": "1b34afef1434a973",
+   "id": "318b92c23e4f47c6",
    "outputs": [
     {
      "name": "stdout",
@@ -485,7 +531,346 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 38
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Fixing a Data Type\n",
+   "id": "2e75c5cf58f9f05d"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T21:20:02.252250Z",
+     "start_time": "2025-09-23T21:20:02.212510Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "police.info()",
+   "id": "42ebb66b9a24cbdf",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 91741 entries, 0 to 91740\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   stop_date           91741 non-null  object\n",
+      " 1   stop_time           91741 non-null  object\n",
+      " 2   driver_gender       86536 non-null  object\n",
+      " 3   driver_race         86539 non-null  object\n",
+      " 4   violation_raw       86539 non-null  object\n",
+      " 5   violation           86539 non-null  object\n",
+      " 6   search_conducted    91741 non-null  bool  \n",
+      " 7   search_type         3307 non-null   object\n",
+      " 8   stop_outcome        86539 non-null  object\n",
+      " 9   is_arrested         86539 non-null  object\n",
+      " 10  stop_duration       86539 non-null  object\n",
+      " 11  drugs_related_stop  91741 non-null  bool  \n",
+      " 12  district            91741 non-null  object\n",
+      "dtypes: bool(2), object(11)\n",
+      "memory usage: 7.9+ MB\n"
+     ]
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T21:20:02.275786Z",
+     "start_time": "2025-09-23T21:20:02.258863Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "police.head()",
+   "id": "168eab6b6dfdcce8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    stop_date stop_time driver_gender driver_race  \\\n",
+       "0  2005-01-04     12:55             M       White   \n",
+       "1  2005-01-23     23:15             M       White   \n",
+       "2  2005-02-17     04:15             M       White   \n",
+       "3  2005-02-20     17:15             M       White   \n",
+       "4  2005-02-24     01:20             F       White   \n",
+       "\n",
+       "                    violation_raw  violation  search_conducted search_type  \\\n",
+       "0  Equipment/Inspection Violation  Equipment             False         NaN   \n",
+       "1                        Speeding   Speeding             False         NaN   \n",
+       "2                        Speeding   Speeding             False         NaN   \n",
+       "3                Call for Service      Other             False         NaN   \n",
+       "4                        Speeding   Speeding             False         NaN   \n",
+       "\n",
+       "    stop_outcome is_arrested stop_duration  drugs_related_stop district  \n",
+       "0       Citation       False      0-15 Min               False  Zone X4  \n",
+       "1       Citation       False      0-15 Min               False  Zone K3  \n",
+       "2       Citation       False      0-15 Min               False  Zone X4  \n",
+       "3  Arrest Driver        True     16-30 Min               False  Zone X1  \n",
+       "4       Citation       False      0-15 Min               False  Zone X3  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stop_date</th>\n",
+       "      <th>stop_time</th>\n",
+       "      <th>driver_gender</th>\n",
+       "      <th>driver_race</th>\n",
+       "      <th>violation_raw</th>\n",
+       "      <th>violation</th>\n",
+       "      <th>search_conducted</th>\n",
+       "      <th>search_type</th>\n",
+       "      <th>stop_outcome</th>\n",
+       "      <th>is_arrested</th>\n",
+       "      <th>stop_duration</th>\n",
+       "      <th>drugs_related_stop</th>\n",
+       "      <th>district</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2005-01-04</td>\n",
+       "      <td>12:55</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Equipment/Inspection Violation</td>\n",
+       "      <td>Equipment</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Citation</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0-15 Min</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Zone X4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2005-01-23</td>\n",
+       "      <td>23:15</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Citation</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0-15 Min</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Zone K3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2005-02-17</td>\n",
+       "      <td>04:15</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Citation</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0-15 Min</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Zone X4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2005-02-20</td>\n",
+       "      <td>17:15</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Call for Service</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Arrest Driver</td>\n",
+       "      <td>True</td>\n",
+       "      <td>16-30 Min</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Zone X1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2005-02-24</td>\n",
+       "      <td>01:20</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Citation</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0-15 Min</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Zone X3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 37
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "Columns sometimes have the wrong data type, which can limit how they’re used in analysis. Adjusting them ensures accuracy and unlocks the right operations.\n",
+    "\n",
+    "In this step:\n",
+    "\n",
+    "- The **`is_arrested`** column is currently stored as an `object` type.\n",
+    "- Since it contains only `True` and `False` values, it will be converted to a **boolean (`bool`) type**.\n",
+    "- This change allows for logical and mathematical operations that would not be possible with the wrong data type.\n",
+    "\n",
+    "Correcting data types makes the dataset more consistent and easier to analyze."
+   ],
+   "id": "7beb24e6beedb04b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T21:23:28.972884Z",
+     "start_time": "2025-09-23T21:23:28.956549Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "police['is_arrested']=police['is_arrested'].astype('bool')\n",
+    "police['is_arrested'].dtypes"
+   ],
+   "id": "9bec340e9d925d65",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('bool')"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 40
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Combining Object Columns\n",
+    "\n",
+    "Working with dates and times separately can be inefficient and limit analysis options. Combining them into a single column makes it easier to work with time-based data.\n",
+    "\n",
+    "In this step:\n",
+    "\n",
+    "- The **`stop_date`** and **`stop_time`** columns (currently stored as `object` types) will be **merged into one column**.\n",
+    "- The combined column will then be **converted into a `datetime` format**.\n",
+    "- This will allow the use of convenient **date and time attributes** (such as year, month, day, or hour) for deeper analysis later in the project.\n",
+    "\n",
+    "Unifying date and time creates a stronger foundation for time series analysis."
+   ],
+   "id": "249bf80009c908db"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T21:31:21.958760Z",
+     "start_time": "2025-09-23T21:31:21.892065Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "combined = police['stop_date'].str.cat(police['stop_time'],sep=' ')\n",
+    "police['date_and_time']=pd.to_datetime(combined)\n",
+    "police['date_and_time'].dtypes"
+   ],
+   "id": "fb5a97d8579cefa0",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('<M8[ns]')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 46
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Checking the new column",
+   "id": "e64d9040e5070e67"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-23T21:31:39.025819Z",
+     "start_time": "2025-09-23T21:31:39.000236Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "police['date_and_time']",
+   "id": "870775e11af9f65a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2005-01-04 12:55:00\n",
+       "1       2005-01-23 23:15:00\n",
+       "2       2005-02-17 04:15:00\n",
+       "3       2005-02-20 17:15:00\n",
+       "4       2005-02-24 01:20:00\n",
+       "                ...        \n",
+       "91736   2015-12-31 21:21:00\n",
+       "91737   2015-12-31 21:59:00\n",
+       "91738   2015-12-31 22:04:00\n",
+       "91739   2015-12-31 22:09:00\n",
+       "91740   2015-12-31 22:47:00\n",
+       "Name: date_and_time, Length: 86536, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 47
   },
   {
    "metadata": {},
@@ -493,7 +878,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "42ebb66b9a24cbdf"
+   "id": "b4ef9d4fee36cf81"
   }
  ],
  "metadata": {
