--- a/Police Activity Analysis - EDA.ipynb
+++ b/Police Activity Analysis - EDA.ipynb
@@ -42,29 +42,29 @@
    "id": "74dbda4fa380168d"
   },
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:08.632883Z",
-     "start_time": "2025-09-23T21:36:08.628492Z"
+     "end_time": "2025-09-24T21:12:34.066949Z",
+     "start_time": "2025-09-24T21:12:34.062223Z"
     }
    },
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ],
-   "outputs": [],
-   "execution_count": 66
+   "id": "initial_id"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:08.842045Z",
-     "start_time": "2025-09-23T21:36:08.647530Z"
+     "end_time": "2025-09-24T21:12:34.413479Z",
+     "start_time": "2025-09-24T21:12:34.101427Z"
     }
    },
    "cell_type": "code",
@@ -230,12 +230,12 @@
        "</div>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 67
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -258,8 +258,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:08.903832Z",
-     "start_time": "2025-09-23T21:36:08.861322Z"
+     "end_time": "2025-09-24T21:12:34.498313Z",
+     "start_time": "2025-09-24T21:12:34.444343Z"
     }
    },
    "cell_type": "code",
@@ -287,18 +287,18 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 68
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:08.916373Z",
-     "start_time": "2025-09-23T21:36:08.910283Z"
+     "end_time": "2025-09-24T21:12:34.519150Z",
+     "start_time": "2025-09-24T21:12:34.512047Z"
     }
    },
    "cell_type": "code",
@@ -321,13 +321,13 @@
      ]
     }
    ],
-   "execution_count": 69
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:08.943425Z",
-     "start_time": "2025-09-23T21:36:08.932280Z"
+     "end_time": "2025-09-24T21:12:34.568830Z",
+     "start_time": "2025-09-24T21:12:34.552733Z"
     }
    },
    "cell_type": "code",
@@ -342,12 +342,12 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 70
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -369,8 +369,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:08.993914Z",
-     "start_time": "2025-09-23T21:36:08.970897Z"
+     "end_time": "2025-09-24T21:12:34.616518Z",
+     "start_time": "2025-09-24T21:12:34.597402Z"
     }
    },
    "cell_type": "code",
@@ -386,18 +386,18 @@
        "(91741, 13)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 71
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.052488Z",
-     "start_time": "2025-09-23T21:36:09.010458Z"
+     "end_time": "2025-09-24T21:12:34.696651Z",
+     "start_time": "2025-09-24T21:12:34.644546Z"
     }
    },
    "cell_type": "code",
@@ -423,12 +423,12 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 72
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -443,8 +443,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.122840Z",
-     "start_time": "2025-09-23T21:36:09.080081Z"
+     "end_time": "2025-09-24T21:12:34.766334Z",
+     "start_time": "2025-09-24T21:12:34.715672Z"
     }
    },
    "cell_type": "code",
@@ -476,7 +476,7 @@
      ]
     }
    ],
-   "execution_count": 73
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -497,8 +497,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.190329Z",
-     "start_time": "2025-09-23T21:36:09.130375Z"
+     "end_time": "2025-09-24T21:12:34.872230Z",
+     "start_time": "2025-09-24T21:12:34.794667Z"
     }
    },
    "cell_type": "code",
@@ -531,7 +531,7 @@
      ]
     }
    ],
-   "execution_count": 74
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -542,8 +542,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.260227Z",
-     "start_time": "2025-09-23T21:36:09.210447Z"
+     "end_time": "2025-09-24T21:12:34.968854Z",
+     "start_time": "2025-09-24T21:12:34.905679Z"
     }
    },
    "cell_type": "code",
@@ -577,13 +577,13 @@
      ]
     }
    ],
-   "execution_count": 75
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.303121Z",
-     "start_time": "2025-09-23T21:36:09.279575Z"
+     "end_time": "2025-09-24T21:12:35.020894Z",
+     "start_time": "2025-09-24T21:12:34.997110Z"
     }
    },
    "cell_type": "code",
@@ -734,12 +734,12 @@
        "</div>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 76
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -761,8 +761,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.329344Z",
-     "start_time": "2025-09-23T21:36:09.319317Z"
+     "end_time": "2025-09-24T21:12:35.096991Z",
+     "start_time": "2025-09-24T21:12:35.083684Z"
     }
    },
    "cell_type": "code",
@@ -778,12 +778,12 @@
        "dtype('bool')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 77
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -806,8 +806,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.444204Z",
-     "start_time": "2025-09-23T21:36:09.379137Z"
+     "end_time": "2025-09-24T21:12:35.261523Z",
+     "start_time": "2025-09-24T21:12:35.163260Z"
     }
    },
    "cell_type": "code",
@@ -824,12 +824,12 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 78
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -840,8 +840,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.459909Z",
-     "start_time": "2025-09-23T21:36:09.452121Z"
+     "end_time": "2025-09-24T21:12:35.330933Z",
+     "start_time": "2025-09-24T21:12:35.317406Z"
     }
    },
    "cell_type": "code",
@@ -859,12 +859,12 @@
        "Name: stop_datetime, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 79
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -887,8 +887,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.519692Z",
-     "start_time": "2025-09-23T21:36:09.480448Z"
+     "end_time": "2025-09-24T21:12:35.450980Z",
+     "start_time": "2025-09-24T21:12:35.430920Z"
     }
    },
    "cell_type": "code",
@@ -915,18 +915,18 @@
        "              dtype='datetime64[ns]', name='stop_datetime', length=86536, freq=None)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 80
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.568473Z",
-     "start_time": "2025-09-23T21:36:09.552337Z"
+     "end_time": "2025-09-24T21:12:35.546258Z",
+     "start_time": "2025-09-24T21:12:35.519123Z"
     }
    },
    "cell_type": "code",
@@ -1104,25 +1104,105 @@
        "</div>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 81
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Chapter Two: Exploring the relationship between gender and policing",
+   "id": "ecdbac9969e74cb3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Examining Traffic Violations\n",
+    "\n",
+    "Before analyzing how violations differ by gender, it's useful to understand the overall patterns in the dataset. Establishing this baseline helps provide context for deeper comparisons later.\n",
+    "\n",
+    "In this step:\n",
+    "\n",
+    "- Count the **unique values** in the **`violation`** column to see the types of traffic violations committed by all drivers.\n",
+    "- Calculate the **proportion** of each violation type relative to the total number of stops.\n",
+    "\n",
+    "This overview will serve as a reference point for analyzing differences in violations across genders and other factors in subsequent steps.\n"
+   ],
+   "id": "8ca1fe255d60a09a"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-23T21:36:09.602558Z",
-     "start_time": "2025-09-23T21:36:09.598572Z"
+     "end_time": "2025-09-24T21:15:54.361507Z",
+     "start_time": "2025-09-24T21:15:54.304198Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": "police.violation.value_counts()",
    "id": "a60eb16ae17e6384",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "violation\n",
+       "Speeding               48423\n",
+       "Moving violation       16224\n",
+       "Equipment              10921\n",
+       "Other                   4409\n",
+       "Registration/plates     3703\n",
+       "Seat belt               2856\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:16:06.464186Z",
+     "start_time": "2025-09-24T21:16:06.441349Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "police.violation.value_counts(normalize = True)",
+   "id": "7c8f1d660c9bfc33",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "violation\n",
+       "Speeding               0.559571\n",
+       "Moving violation       0.187483\n",
+       "Equipment              0.126202\n",
+       "Other                  0.050950\n",
+       "Registration/plates    0.042791\n",
+       "Seat belt              0.033004\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "9f160ea6fb1b7b0e"
   }
  ],
  "metadata": {
