--- a/Police Activity Analysis - EDA.ipynb
+++ b/Police Activity Analysis - EDA.ipynb
@@ -45,26 +45,26 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:34.066949Z",
-     "start_time": "2025-09-24T21:12:34.062223Z"
+     "end_time": "2025-09-24T21:21:31.941597Z",
+     "start_time": "2025-09-24T21:21:31.934996Z"
     }
    },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ],
-   "id": "initial_id"
+   "id": "initial_id",
+   "outputs": [],
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:34.413479Z",
-     "start_time": "2025-09-24T21:12:34.101427Z"
+     "end_time": "2025-09-24T21:21:32.222075Z",
+     "start_time": "2025-09-24T21:21:32.035643Z"
     }
    },
    "cell_type": "code",
@@ -230,12 +230,12 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 42
   },
   {
    "metadata": {},
@@ -258,8 +258,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:34.498313Z",
-     "start_time": "2025-09-24T21:12:34.444343Z"
+     "end_time": "2025-09-24T21:21:32.326308Z",
+     "start_time": "2025-09-24T21:21:32.270030Z"
     }
    },
    "cell_type": "code",
@@ -287,18 +287,18 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:34.519150Z",
-     "start_time": "2025-09-24T21:12:34.512047Z"
+     "end_time": "2025-09-24T21:21:32.341317Z",
+     "start_time": "2025-09-24T21:21:32.335006Z"
     }
    },
    "cell_type": "code",
@@ -321,13 +321,13 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:34.568830Z",
-     "start_time": "2025-09-24T21:12:34.552733Z"
+     "end_time": "2025-09-24T21:21:32.382201Z",
+     "start_time": "2025-09-24T21:21:32.367998Z"
     }
    },
    "cell_type": "code",
@@ -342,12 +342,12 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 45
   },
   {
    "metadata": {},
@@ -369,8 +369,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:34.616518Z",
-     "start_time": "2025-09-24T21:12:34.597402Z"
+     "end_time": "2025-09-24T21:21:32.441199Z",
+     "start_time": "2025-09-24T21:21:32.421408Z"
     }
    },
    "cell_type": "code",
@@ -386,18 +386,18 @@
        "(91741, 13)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 46
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:34.696651Z",
-     "start_time": "2025-09-24T21:12:34.644546Z"
+     "end_time": "2025-09-24T21:21:32.496396Z",
+     "start_time": "2025-09-24T21:21:32.451684Z"
     }
    },
    "cell_type": "code",
@@ -423,12 +423,12 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 47
   },
   {
    "metadata": {},
@@ -443,8 +443,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:34.766334Z",
-     "start_time": "2025-09-24T21:12:34.715672Z"
+     "end_time": "2025-09-24T21:21:32.554353Z",
+     "start_time": "2025-09-24T21:21:32.506033Z"
     }
    },
    "cell_type": "code",
@@ -476,7 +476,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 48
   },
   {
    "metadata": {},
@@ -497,8 +497,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:34.872230Z",
-     "start_time": "2025-09-24T21:12:34.794667Z"
+     "end_time": "2025-09-24T21:21:32.634544Z",
+     "start_time": "2025-09-24T21:21:32.576090Z"
     }
    },
    "cell_type": "code",
@@ -531,7 +531,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 49
   },
   {
    "metadata": {},
@@ -542,8 +542,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:34.968854Z",
-     "start_time": "2025-09-24T21:12:34.905679Z"
+     "end_time": "2025-09-24T21:21:32.685637Z",
+     "start_time": "2025-09-24T21:21:32.643841Z"
     }
    },
    "cell_type": "code",
@@ -577,13 +577,13 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 50
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:35.020894Z",
-     "start_time": "2025-09-24T21:12:34.997110Z"
+     "end_time": "2025-09-24T21:21:32.736645Z",
+     "start_time": "2025-09-24T21:21:32.708645Z"
     }
    },
    "cell_type": "code",
@@ -734,12 +734,12 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 51
   },
   {
    "metadata": {},
@@ -761,8 +761,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:35.096991Z",
-     "start_time": "2025-09-24T21:12:35.083684Z"
+     "end_time": "2025-09-24T21:21:32.780433Z",
+     "start_time": "2025-09-24T21:21:32.766797Z"
     }
    },
    "cell_type": "code",
@@ -778,12 +778,12 @@
        "dtype('bool')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 52
   },
   {
    "metadata": {},
@@ -806,8 +806,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:35.261523Z",
-     "start_time": "2025-09-24T21:12:35.163260Z"
+     "end_time": "2025-09-24T21:21:32.893792Z",
+     "start_time": "2025-09-24T21:21:32.815458Z"
     }
    },
    "cell_type": "code",
@@ -824,12 +824,12 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 53
   },
   {
    "metadata": {},
@@ -840,8 +840,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:35.330933Z",
-     "start_time": "2025-09-24T21:12:35.317406Z"
+     "end_time": "2025-09-24T21:21:32.926089Z",
+     "start_time": "2025-09-24T21:21:32.915752Z"
     }
    },
    "cell_type": "code",
@@ -859,12 +859,12 @@
        "Name: stop_datetime, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 54
   },
   {
    "metadata": {},
@@ -887,8 +887,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:35.450980Z",
-     "start_time": "2025-09-24T21:12:35.430920Z"
+     "end_time": "2025-09-24T21:21:32.975610Z",
+     "start_time": "2025-09-24T21:21:32.959892Z"
     }
    },
    "cell_type": "code",
@@ -915,18 +915,18 @@
        "              dtype='datetime64[ns]', name='stop_datetime', length=86536, freq=None)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 55
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:12:35.546258Z",
-     "start_time": "2025-09-24T21:12:35.519123Z"
+     "end_time": "2025-09-24T21:21:33.011339Z",
+     "start_time": "2025-09-24T21:21:32.990826Z"
     }
    },
    "cell_type": "code",
@@ -1104,12 +1104,12 @@
        "</div>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 56
   },
   {
    "metadata": {},
@@ -1137,8 +1137,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:15:54.361507Z",
-     "start_time": "2025-09-24T21:15:54.304198Z"
+     "end_time": "2025-09-24T21:21:33.057111Z",
+     "start_time": "2025-09-24T21:21:33.042463Z"
     }
    },
    "cell_type": "code",
@@ -1158,18 +1158,18 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 57
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-24T21:16:06.464186Z",
-     "start_time": "2025-09-24T21:16:06.441349Z"
+     "end_time": "2025-09-24T21:21:33.110978Z",
+     "start_time": "2025-09-24T21:21:33.096709Z"
     }
    },
    "cell_type": "code",
@@ -1189,12 +1189,94 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 58
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Comparing Violations by Gender\n",
+    "\n",
+    "To understand how traffic behavior differs between male and female drivers, it's important to analyze the types of violations committed by each group separately.\n",
+    "\n",
+    "In this step:\n",
+    "\n",
+    "- I will create a **`female`** DataFrame containing only rows where `driver_gender` is `'F'`.\n",
+    "- I will create **`male`** DataFrame containing only rows where `driver_gender` is `'M'`.\n",
+    "- I will count the violations in each DataFrame and express them as **proportions** of the total for that gender.\n",
+    "\n",
+    "This comparison will reveal whether certain types of violations are more common among male or female drivers.\n"
+   ],
+   "id": "c634795760dd6bcc"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:24:05.376800Z",
+     "start_time": "2025-09-24T21:24:05.348776Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "female = police[police.driver_gender == 'F']\n",
+    "female_violations = female.violation.value_counts(normalize=True)\n",
+    "print(female_violations)"
+   ],
+   "id": "9f160ea6fb1b7b0e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "violation\n",
+      "Speeding               0.658114\n",
+      "Moving violation       0.138218\n",
+      "Equipment              0.105199\n",
+      "Registration/plates    0.044418\n",
+      "Other                  0.029738\n",
+      "Seat belt              0.024312\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "execution_count": 65
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:24:40.921205Z",
+     "start_time": "2025-09-24T21:24:40.890432Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "male = police[police.driver_gender == \"M\"]\n",
+    "male_violations = male.violation.value_counts(normalize=True)\n",
+    "print(male_violations)"
+   ],
+   "id": "1067945459dcbc06",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "violation\n",
+      "Speeding               0.522243\n",
+      "Moving violation       0.206144\n",
+      "Equipment              0.134158\n",
+      "Other                  0.058985\n",
+      "Registration/plates    0.042175\n",
+      "Seat belt              0.036296\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "execution_count": 66
   },
   {
    "metadata": {},
@@ -1202,7 +1284,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "9f160ea6fb1b7b0e"
+   "id": "65bc5bd56dad6b1b"
   }
  ],
  "metadata": {
