--- a/Police Activity Analysis - EDA.ipynb
+++ b/Police Activity Analysis - EDA.ipynb
@@ -1280,11 +1280,187 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Comparing Speeding Outcomes by Gender\n",
+    "\n",
+    "A common belief is that gender influences the outcome of a speeding stop, such as whether a driver receives a **citation** (ticket) or a **warning**. This step investigates whether the data supports that idea.\n",
+    "\n",
+    "In this step:\n",
+    "\n",
+    "- I will create a **`female_and_speeding`** DataFrame with female drivers stopped for speeding.\n",
+    "- I will create a **`male_and_speeding`** DataFrame with male drivers stopped for speeding.\n",
+    "- I will create the **`stop_outcome`** values for each gender and express them as **proportions**.\n",
+    "\n",
+    "Analyzing these outcomes will reveal whether there is a noticeable difference in how male and female drivers are treated during speeding stops.\n"
+   ],
+   "id": "189a2cc8eff42fba"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:30:23.917351Z",
+     "start_time": "2025-09-24T21:30:23.864159Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "female_and_speeding = female[female.violation == 'Speeding']\n",
+    "female_and_speeding.stop_outcome.value_counts(normalize=True)"
+   ],
+   "id": "65bc5bd56dad6b1b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "stop_outcome\n",
+       "Citation            0.952192\n",
+       "Warning             0.040074\n",
+       "Arrest Driver       0.005752\n",
+       "N/D                 0.000959\n",
+       "Arrest Passenger    0.000639\n",
+       "No Action           0.000383\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 69
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:32:07.261166Z",
+     "start_time": "2025-09-24T21:32:07.241117Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "male_and_speeding = male[male.violation == 'Speeding']\n",
+    "male_and_speeding.stop_outcome.value_counts(normalize=True)"
+   ],
+   "id": "cda5949325560857",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "stop_outcome\n",
+       "Citation            0.944595\n",
+       "Warning             0.036184\n",
+       "Arrest Driver       0.015895\n",
+       "Arrest Passenger    0.001281\n",
+       "No Action           0.001068\n",
+       "N/D                 0.000976\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 72
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Calculating the Search Rate\n",
+    "\n",
+    "One way to measure police behavior during traffic stops is by looking at how often a **vehicle search** is conducted. This percentage, known as the **search rate**, provides insight into the frequency of searches overall.\n",
+    "\n",
+    "In this step:\n",
+    "\n",
+    "- I will verify that the **`search_conducted`** column is a **Boolean Series**.\n",
+    "- I will calculate the search rate by **counting the True and False values** and expressing them as proportions.\n",
+    "- I will calculate the search rate again by taking the **mean** of the Series (the mean should equal the proportion of `True` values).\n",
+    "\n",
+    "This calculation establishes a baseline for how often searches occur during traffic stops.\n"
+   ],
+   "id": "d60e1e05e5057cea"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:35:54.220644Z",
+     "start_time": "2025-09-24T21:35:54.209071Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "police.search_conducted.dtypes",
+   "id": "12003d71be4ed9cd",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('bool')"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 73
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:36:35.880217Z",
+     "start_time": "2025-09-24T21:36:35.862830Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "police.search_conducted.value_counts(normalize=True)",
+   "id": "1c20dedae949b67c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "search_conducted\n",
+       "False    0.961785\n",
+       "True     0.038215\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 76
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:37:04.179223Z",
+     "start_time": "2025-09-24T21:37:04.168414Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(police.search_conducted.mean())",
+   "id": "6371b16757574cf1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0382153092354627\n"
+     ]
+    }
+   ],
+   "execution_count": 78
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "65bc5bd56dad6b1b"
+   "id": "58b5284d3a69aebe"
   }
  ],
  "metadata": {
