--- a/Police Activity Analysis - EDA.ipynb
+++ b/Police Activity Analysis - EDA.ipynb
@@ -1123,14 +1123,14 @@
    "source": [
     "## Examining Traffic Violations\n",
     "\n",
-    "Before analyzing how violations differ by gender, it's useful to understand the overall patterns in the dataset. Establishing this baseline helps provide context for deeper comparisons later.\n",
+    "Before comparing violations across genders, it’s important to understand the overall distribution of violations committed by **all drivers**. This baseline helps provide context for any differences observed later.\n",
     "\n",
-    "In this step:\n",
+    "Here’s what I will do:\n",
     "\n",
-    "- Count the **unique values** in the **`violation`** column to see the types of traffic violations committed by all drivers.\n",
-    "- Calculate the **proportion** of each violation type relative to the total number of stops.\n",
+    "1. I will **count the unique values** in the `violation` column of the `ri` DataFrame to identify the different types of traffic violations recorded.\n",
+    "2. I will **calculate the proportions** of each violation type by expressing the counts as a percentage of the total number of traffic stops.\n",
     "\n",
-    "This overview will serve as a reference point for analyzing differences in violations across genders and other factors in subsequent steps.\n"
+    "This initial analysis will give a clear overview of the most common violations in the dataset before breaking them down by gender.\n"
    ],
    "id": "8ca1fe255d60a09a"
   },
@@ -1202,15 +1202,16 @@
    "source": [
     "## Comparing Violations by Gender\n",
     "\n",
-    "To understand how traffic behavior differs between male and female drivers, it's important to analyze the types of violations committed by each group separately.\n",
+    "To see if male and female drivers commit different types of traffic violations, I will separate the dataset by gender and analyze the distribution of violations for each group.\n",
     "\n",
-    "In this step:\n",
+    "Here’s what I will do:\n",
     "\n",
-    "- I will create a **`female`** DataFrame containing only rows where `driver_gender` is `'F'`.\n",
-    "- I will create **`male`** DataFrame containing only rows where `driver_gender` is `'M'`.\n",
-    "- I will count the violations in each DataFrame and express them as **proportions** of the total for that gender.\n",
+    "1. I will **create a DataFrame** called `female` containing only the rows where `driver_gender` is `'F'`.\n",
+    "2. I will **create another DataFrame** called `male` containing only the rows where `driver_gender` is `'M'`.\n",
+    "3. I will **count the types of violations** committed by female drivers and calculate their **proportions** relative to the total number of stops for females.\n",
+    "4. I will **repeat the same calculation** for male drivers to see how their violation patterns compare.\n",
     "\n",
-    "This comparison will reveal whether certain types of violations are more common among male or female drivers.\n"
+    "This breakdown will help identify whether there are notable differences in the types of violations committed by each gender."
    ],
    "id": "c634795760dd6bcc"
   },
@@ -1284,15 +1285,16 @@
    "source": [
     "## Comparing Speeding Outcomes by Gender\n",
     "\n",
-    "A common belief is that gender influences the outcome of a speeding stop, such as whether a driver receives a **citation** (ticket) or a **warning**. This step investigates whether the data supports that idea.\n",
+    "To investigate whether gender affects the outcome of a speeding stop, I will analyze the proportions of **citations** and **warnings** issued to male and female drivers.\n",
     "\n",
-    "In this step:\n",
+    "Here’s what I will do:\n",
     "\n",
-    "- I will create a **`female_and_speeding`** DataFrame with female drivers stopped for speeding.\n",
-    "- I will create a **`male_and_speeding`** DataFrame with male drivers stopped for speeding.\n",
-    "- I will create the **`stop_outcome`** values for each gender and express them as **proportions**.\n",
+    "1. I will **create a DataFrame** called `female_and_speeding` that includes only **female drivers** who were stopped for speeding.\n",
+    "2. I will **create another DataFrame** called `male_and_speeding` that includes only **male drivers** stopped for speeding.\n",
+    "3. I will **count the stop outcomes** for female drivers (from the `stop_outcome` column) and express them as **proportions** to see the percentage of citations vs. warnings.\n",
+    "4. I will **repeat the same calculation** for male drivers to compare the results.\n",
     "\n",
-    "Analyzing these outcomes will reveal whether there is a noticeable difference in how male and female drivers are treated during speeding stops.\n"
+    "This will help determine if there is evidence in the data that gender influences the outcome of speeding stops.\n"
    ],
    "id": "189a2cc8eff42fba"
   },
@@ -1370,15 +1372,15 @@
    "source": [
     "## Calculating the Search Rate\n",
     "\n",
-    "One way to measure police behavior during traffic stops is by looking at how often a **vehicle search** is conducted. This percentage, known as the **search rate**, provides insight into the frequency of searches overall.\n",
+    "To understand how frequently vehicle searches occur during traffic stops, I will calculate the **search rate** — the percentage of stops that lead to a search.\n",
     "\n",
-    "In this step:\n",
+    "Here’s what I will do:\n",
     "\n",
-    "- I will verify that the **`search_conducted`** column is a **Boolean Series**.\n",
-    "- I will calculate the search rate by **counting the True and False values** and expressing them as proportions.\n",
-    "- I will calculate the search rate again by taking the **mean** of the Series (the mean should equal the proportion of `True` values).\n",
+    "1. I will **check the data type** of the `search_conducted` column to make sure it is a **Boolean Series** (`True` or `False`).\n",
+    "2. I will **count the values** in the Series and express them as **proportions** to calculate the percentage of stops where a search was conducted.\n",
+    "3. I will **take the mean** of the Series to calculate the search rate again — this should match the proportion of `True` values from the previous step.\n",
     "\n",
-    "This calculation establishes a baseline for how often searches occur during traffic stops.\n"
+    "This will give a clear measure of how often searches occur across all traffic stops in the dataset.\n"
    ],
    "id": "d60e1e05e5057cea"
   },
@@ -1453,6 +1455,24 @@
     }
    ],
    "execution_count": 78
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Comparing Search Rates by Gender\n",
+    "\n",
+    "To understand whether gender influences the likelihood of a vehicle search, I will calculate and compare search rates for female and male drivers separately, then verify the results using a grouped calculation.\n",
+    "\n",
+    "Here’s what I will do:\n",
+    "\n",
+    "1. I will **filter the DataFrame** to include only female drivers and calculate the search rate by taking the **mean of `search_conducted`**.\n",
+    "2. I will **repeat the process for male drivers**, filtering the DataFrame by gender and again calculating the mean search rate.\n",
+    "3. I will **group the dataset by `driver_gender`** and calculate the search rate for both genders at once, confirming that the results match the individual calculations.\n",
+    "\n",
+    "This step will show whether male and female drivers experience different search rates during traffic stops.\n"
+   ],
+   "id": "48cd8cafe899a94f"
   },
   {
    "metadata": {},
