--- a/Police Activity Analysis - EDA.ipynb
+++ b/Police Activity Analysis - EDA.ipynb
@@ -1475,12 +1475,267 @@
    "id": "48cd8cafe899a94f"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:45:11.158130Z",
+     "start_time": "2025-09-24T21:45:11.088506Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "police.head()",
+   "id": "e019d3dff976b25a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                      stop_date stop_time driver_gender driver_race  \\\n",
+       "stop_datetime                                                         \n",
+       "2005-01-04 12:55:00  2005-01-04     12:55             M       White   \n",
+       "2005-01-23 23:15:00  2005-01-23     23:15             M       White   \n",
+       "2005-02-17 04:15:00  2005-02-17     04:15             M       White   \n",
+       "2005-02-20 17:15:00  2005-02-20     17:15             M       White   \n",
+       "2005-02-24 01:20:00  2005-02-24     01:20             F       White   \n",
+       "\n",
+       "                                      violation_raw  violation  \\\n",
+       "stop_datetime                                                    \n",
+       "2005-01-04 12:55:00  Equipment/Inspection Violation  Equipment   \n",
+       "2005-01-23 23:15:00                        Speeding   Speeding   \n",
+       "2005-02-17 04:15:00                        Speeding   Speeding   \n",
+       "2005-02-20 17:15:00                Call for Service      Other   \n",
+       "2005-02-24 01:20:00                        Speeding   Speeding   \n",
+       "\n",
+       "                     search_conducted search_type   stop_outcome  is_arrested  \\\n",
+       "stop_datetime                                                                   \n",
+       "2005-01-04 12:55:00             False         NaN       Citation        False   \n",
+       "2005-01-23 23:15:00             False         NaN       Citation        False   \n",
+       "2005-02-17 04:15:00             False         NaN       Citation        False   \n",
+       "2005-02-20 17:15:00             False         NaN  Arrest Driver         True   \n",
+       "2005-02-24 01:20:00             False         NaN       Citation        False   \n",
+       "\n",
+       "                    stop_duration  drugs_related_stop district  \n",
+       "stop_datetime                                                   \n",
+       "2005-01-04 12:55:00      0-15 Min               False  Zone X4  \n",
+       "2005-01-23 23:15:00      0-15 Min               False  Zone K3  \n",
+       "2005-02-17 04:15:00      0-15 Min               False  Zone X4  \n",
+       "2005-02-20 17:15:00     16-30 Min               False  Zone X1  \n",
+       "2005-02-24 01:20:00      0-15 Min               False  Zone X3  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stop_date</th>\n",
+       "      <th>stop_time</th>\n",
+       "      <th>driver_gender</th>\n",
+       "      <th>driver_race</th>\n",
+       "      <th>violation_raw</th>\n",
+       "      <th>violation</th>\n",
+       "      <th>search_conducted</th>\n",
+       "      <th>search_type</th>\n",
+       "      <th>stop_outcome</th>\n",
+       "      <th>is_arrested</th>\n",
+       "      <th>stop_duration</th>\n",
+       "      <th>drugs_related_stop</th>\n",
+       "      <th>district</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>stop_datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2005-01-04 12:55:00</th>\n",
+       "      <td>2005-01-04</td>\n",
+       "      <td>12:55</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Equipment/Inspection Violation</td>\n",
+       "      <td>Equipment</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Citation</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0-15 Min</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Zone X4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-01-23 23:15:00</th>\n",
+       "      <td>2005-01-23</td>\n",
+       "      <td>23:15</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Citation</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0-15 Min</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Zone K3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-02-17 04:15:00</th>\n",
+       "      <td>2005-02-17</td>\n",
+       "      <td>04:15</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Citation</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0-15 Min</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Zone X4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-02-20 17:15:00</th>\n",
+       "      <td>2005-02-20</td>\n",
+       "      <td>17:15</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Call for Service</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Arrest Driver</td>\n",
+       "      <td>True</td>\n",
+       "      <td>16-30 Min</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Zone X1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-02-24 01:20:00</th>\n",
+       "      <td>2005-02-24</td>\n",
+       "      <td>01:20</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>Speeding</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Citation</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0-15 Min</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Zone X3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 79
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:46:30.302299Z",
+     "start_time": "2025-09-24T21:46:30.281747Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(police[police.driver_gender == 'F'].search_conducted.mean())",
+   "id": "58b5284d3a69aebe",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.019180617481282074\n"
+     ]
+    }
+   ],
+   "execution_count": 81
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:46:46.299545Z",
+     "start_time": "2025-09-24T21:46:46.267621Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(police[police.driver_gender == 'M'].search_conducted.mean())",
+   "id": "f01dc12b39e79539",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.04542557598546892\n"
+     ]
+    }
+   ],
+   "execution_count": 82
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-24T21:47:53.680911Z",
+     "start_time": "2025-09-24T21:47:53.595785Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(police.groupby('driver_gender').search_conducted.mean())",
+   "id": "b054372eac7e72f5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "driver_gender\n",
+      "F    0.019181\n",
+      "M    0.045426\n",
+      "Name: search_conducted, dtype: float64\n"
+     ]
+    }
+   ],
+   "execution_count": 84
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "58b5284d3a69aebe"
+   "id": "4b2d3adec03dcf94"
   }
  ],
  "metadata": {
